Clean up DS5 exporter

--- a/tools/export/ds5_5/project.tmpl
+++ b/tools/export/ds5_5/project.tmpl
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>{{name}}_ds5_lpc812</name>
+	<name>{{name}}</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -31,7 +31,7 @@
 				</dictionary>
 				<dictionary>
 					<key>org.eclipse.cdt.make.core.buildLocation</key>
-					<value>${workspace_loc:/ds5_lpc812/Build}</value>
+					<value>${workspace_loc:/{{target_name}}/Build}</value>
 				</dictionary>
 				<dictionary>
 					<key>org.eclipse.cdt.make.core.cleanBuildTarget</key>
