Maybe clean up typo

--- a/tools/export/ds5_5/cproject.tmpl
+++ b/tools/export/ds5_5/cproject.tmpl
@@ -31,7 +31,7 @@
                   <listOptionValue builtIn="false" value="{{s}}"/>
                   {% endfor %}
                 </option>
-                <option id="com.arm.tool.c.compiler.option.preinc.1904241578" superclass="com.arm.tool.c.compiler.option.preinc" useByScannerDiscovery="false" valueType="includeFiles">
+                <option id="com.arm.tool.c.compiler.option.preinc.1904241578" superClass="com.arm.tool.c.compiler.option.preinc" useByScannerDiscovery="false" valueType="includeFiles">
                   <listOptionValue builtIn="false" value="&quot;${workspace_loc:/${ProjName}/{{preinclude}}}&quot;"/>
                 </option>
                 <inputType id="com.arm.tool.c.compiler.input.982666453" superClass="com.arm.tool.c.compiler.input"/>
